--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /Atividade01/nbproject/private/
+/Atividades/Atividade01/build/
+/Atividades/Atividade01/dist/
+/meusite/nbproject/private/
+/Atividade03/nbproject/private/
+/Atividade03/build/
+/Atividade03/dist/
