--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@
 /Atividade03/dist/
 /Atividade04/nbproject/private/
 /Atividade04/build/
+/Atividade05/nbproject/private/
+/Atividade05/build/
+/Atividade05/dist/
+/Atividade01/build/
+/Atividade01/dist/
