--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@
 /Filtro/nbproject/private/
 /Atividade07/nbproject/private/
 /Atividade07/build/
+/Atividade08/nbproject/private/
+/Atividade09/nbproject/private/
+/Atividade10/nbproject/private/
