--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 /Atividade08/nbproject/private/
 /Atividade09/nbproject/private/
 /Atividade10/nbproject/private/
+/Atividade11/nbproject/private/
+/Atividade11/build/
+/Atividade11/dist/
