--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 /Atividade11/build/
 /Atividade11/dist/
 /Atividade11/Atividade07/nbproject/private/
+/Atividade13/nbproject/private/
+/Atividade13/build/
+/Atividade13/dist/
