--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@
 /Atividade13/nbproject/private/
 /Atividade13/build/
 /Atividade13/dist/
+/Atividade14/nbproject/private/
+/Atividade14/build/
+/Atividade14/dist/
