--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@
 /Atividade14/nbproject/private/
 /Atividade14/build/
 /Atividade14/dist/
+/Atividade15/nbproject/private/
+/Atividade15/build/
+/Atividade15/dist/
