--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,12 @@
 /Atividade15/nbproject/private/
 /Atividade15/build/
 /Atividade15/dist/
+/Atividade16/nbproject/private/
+/Atividade16/CarrinhoEJB/nbproject/private/
+/Atividade16/LojaVirtual/nbproject/private/
+/Atividade16/CarrinhoEJB/build/
+/Atividade16/LojaVirtual/build/
+/Atividade16/CarrinhoEJB/dist/
+/Atividade16/build/
+/Atividade16/LojaVirtual/dist/
+/Atividade16/dist/
