--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,12 @@
 /Atividade16/LojaVirtual/dist/
 /Atividade16/dist/
 /Atividade17/nbproject/private/
+/Atividade18/nbproject/private/
+/Atividade18/CadastroEJB-ejb/nbproject/private/
+/Atividade18/CadastroEJB-ejb/build/
+/Atividade18/CadastroEJB-ejb/dist/
+/Atividade18/CadastroWeb-war/nbproject/private/
+/Atividade18/CadastroWeb-war/build/
+/Atividade18/CadastroWeb-war/dist/
+/Atividade18/build/
+/Atividade18/dist/
