--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,16 @@
 /Atividade18/build/
 /Atividade18/dist/
 /Atividade19/nbproject/private/
+
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+
+/Atividade20/nbproject/private/
